--- a/gke.yaml
+++ b/gke.yaml
@@ -22,3 +22,19 @@ spec:
         env:
           - name: PORT
             value: "5000"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gcp-devops-gke-service
+spec:
+  selector:
+    app.kubernetes.io/name: gcp-cloud-build-deploy
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+    selector:
+      app: gcp
+    type: LoadBalancer
