--- a/gke.yaml
+++ b/gke.yaml
@@ -28,11 +28,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gcp-devops-gke-service
+  namespace: default
+  labels:
+    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
 spec:
-  selector:
-    app.kubernetes.io/name: gcp-cloud-build-deploy
   ports:
-    - protocol: TCP
+  - protocol: TCP
       port: 80
       targetPort: 5000
     selector:
